--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>صفحة احترافية مع صور وصوت</title>
+
+  <!-- إضافة Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GGYVYN7C0W"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-GGYVYN7C0W');  <!-- استبدل بـ رمز التتبع الخاص بك -->
+  </script>
+
   <style>
     /* جعل الصور تتكيف مع جميع أحجام الشاشات */
     img {
